Remove symlink in favor of direct inclusion

--- a/paperjs/clickclock.html
+++ b/paperjs/clickclock.html
@@ -9,7 +9,7 @@ body {
 }
     </style>
 
-    <script type='text/javascript' src='paper-full.min.js'></script>
+    <script type='text/javascript' src='dist/paper-full.min.js'></script>
     <script type='text/paperscript' src='clickclock.js' canvas='clock'></script>
   </head>
 
