--- a/paperjs/sysinfo.html
+++ b/paperjs/sysinfo.html
@@ -9,7 +9,7 @@ body {
     </style>
 
     <script type='text/javascript' src='../sysinfo.js'></script>
-    <script type='text/javascript' src='paper-full.min.js'></script>
+    <script type='text/javascript' src='dist/paper-full.min.js'></script>
     <script type='text/paperscript' src='sysinfo.js' canvas='sysinfo'></script>
   </head>
 
