--- a/paperjs/sysinfo.html
+++ b/paperjs/sysinfo.html
@@ -6,6 +6,18 @@
 body {
   background-color: rgba(255,255,255,0.5);
 }
+
+html, body {
+  margin: 0;
+  overflow: hidden;
+  height: 100%;
+}
+
+/* Scale canvas with resize attribute to full size */
+canvas[resize] {
+  width: 100%;
+  height: 100%;
+}
     </style>
 
     <script type='text/javascript' src='../sysinfo.js'></script>
@@ -14,6 +26,6 @@ body {
   </head>
 
   <body>
-    <canvas id='sysinfo' resize width='700' height='200'></canvas>
+    <canvas id='sysinfo' resize="true"></canvas>
   </body>
 </html>
