Factor out common code into own module

--- a/paperjs/sysinfo.html
+++ b/paperjs/sysinfo.html
@@ -22,6 +22,7 @@ canvas[resize] {
 
     <script type='text/javascript' src='../sysinfo.js'></script>
     <script type='text/javascript' src='dist/paper-full.min.js'></script>
+    <script type='text/paperscript' src='common.js' canvas='sysinfo'></script>
     <script type='text/paperscript' src='sysinfo.js' canvas='sysinfo'></script>
   </head>
 
