--- a/paperjs/ticktockclock.html
+++ b/paperjs/ticktockclock.html
@@ -3,9 +3,6 @@
   <head>
     <style type='text/css'>
 body {
-  /* background-color: rgba(128,128,128,0.5); */
-  /* background-color: rgba(128,128,128,0.5); */
-  /* background-color: rgba(255,255,255,0.5); */
   background-color: rgba(0,0,0,0);
 }
     </style>
@@ -16,6 +13,6 @@ body {
   </head>
 
   <body>
-    <canvas id='clock' resize width='400' height='400'></canvas>
+    <canvas id='clock' width='400' height='400'></canvas>
   </body>
 </html>
