--- a/battery_icon.html
+++ b/battery_icon.html
@@ -8,73 +8,69 @@ body {
   background-color: rgba(255,255,255,1.0);
 }
 
-/* #battery { */
-/*   opacity: 1.0; */
-/*   background-color: #FFCC00; */
-/*   float: left; */
-/*   display: -webkit-flex; */
-/*   -webkit-flex-direction: row; */
-/*   -webkit-align-items: center; */
-/*   font-family: "Ubuntu Light"; */
-/*   font-size: 18px; */
-/* } */
-/*  */
-/* #battery > #status { */
-/*   -webkit-order: 1; */
-/*   /* opacity: 0.75; */ */
-/*   /* background-color: #FFCC00; */ */
-/* } */
-/*  */
-/* #battery > #time { */
-/*   -webkit-order: 2; */
-/*   /* opacity: 0.75; */ */
-/*   /* background-color: #FFCC00; */ */
-/* } */
-/*  */
-/* #battery > #status > #icon { */
-/*   width: 30px; */
-/* } */
+#battery {
+  opacity: 1.0;
+  background-color: #FFCC00;
+  float: left;
+  display: -webkit-flex;
+  -webkit-flex-direction: row;
+  -webkit-align-items: center;
+  font-family: "Ubuntu Light";
+  font-size: 18px;
+}
+
+#battery > #status {
+  -webkit-order: 1;
+  /* opacity: 0.75; */
+  /* background-color: #FFCC00; */
+}
+
+#battery > #time {
+  -webkit-order: 2;
+  /* opacity: 0.75; */
+  /* background-color: #FFCC00; */
+}
+
+#battery > #status > #icon {
+  width: 30px;
+}
 
     </style>
 
-    <script src='paper-full.min.js' type='text/javascript'></script>
-    <script src="../org.freedesktop.UPower.js" type='text/javascript'></script>
-    <script src='battery.js' type='text/paperscript' canvas='canvas'></script>
+    <script src="tp_smapi.js" type='text/javascript'></script>
+    <script src="org.freedesktop.UPower.js" type='text/javascript'></script>
 
-  <body>
-    <canvas id='canvas' resize width='400' height='400'></canvas>
+    <script type='text/javascript'>
+
+function onLoad()
+{
+  var batteryDiv = document.createElement('div');
+  batteryDiv.id = 'battery';
+  document.body.appendChild(batteryDiv);
+
+  var statusDiv = document.createElement('div');
+  statusDiv.id = 'status';
+  batteryDiv.appendChild(statusDiv);
+
+  var timeDiv = document.createElement('div');
+  timeDiv.id = 'time';
+  batteryDiv.appendChild(timeDiv);
+
+  var remPercent = TpSmapi.remainingPercent(0);
+
+  var img = '<img id=\"icon\" src=\"' + regularIcon(remPercent) + '\"'
+          + ' alt=\"' + remPercent + '\"></img>';
+
+  statusDiv.innerHTML = img;
+
+  var remRunTime = remainingRunningTime();
+  if (remRunTime != null) {
+    timeDiv.innerHTML += remRunTime.hours + ':' + remRunTime.minutes;
+  }
+}
+
+    </script>
+  </head>
+  <body onload='onLoad();'>
   </body>
 </html>
-
-<!-- function onLoad() -->
-<!-- { -->
-<!--   var batteryDiv = document.createElement('div'); -->
-<!--   batteryDiv.id = 'battery'; -->
-<!--   document.body.appendChild(batteryDiv); -->
-<!--  -->
-<!--   var statusDiv = document.createElement('div'); -->
-<!--   statusDiv.id = 'status'; -->
-<!--   batteryDiv.appendChild(statusDiv); -->
-<!--  -->
-<!--   var timeDiv = document.createElement('div'); -->
-<!--   timeDiv.id = 'time'; -->
-<!--   batteryDiv.appendChild(timeDiv); -->
-<!--  -->
-<!--   var remPercent = TpSmapi.remainingPercent(0); -->
-<!--  -->
-<!--   var img = '<img id=\"icon\" src=\"' + regularIcon(remPercent) + '\"' -->
-<!--           + ' alt=\"' + remPercent + '\"></img>'; -->
-<!--  -->
-<!--   statusDiv.innerHTML = img; -->
-<!--  -->
-<!--   var remRunTime = remainingRunningTime(); -->
-<!--   if (remRunTime != null) { -->
-<!--     timeDiv.innerHTML += remRunTime.hours + ':' + remRunTime.minutes; -->
-<!--   } -->
-<!-- } -->
-<!--  -->
-<!--     </script> -->
-<!--   </head> -->
-<!--   <body onload='onLoad();'> -->
-<!--   </body> -->
-<!-- </html> -->
