Rename files to match their actual functionality

--- a/paperjs/cpuinfo.html
+++ b/paperjs/cpuinfo.html
@@ -22,11 +22,11 @@ canvas[resize] {
 
     <script type='text/javascript' src='../sysinfo.js'></script>
     <script type='text/javascript' src='dist/paper-full.min.js'></script>
-    <script type='text/paperscript' src='common.js' canvas='sysinfo'></script>
-    <script type='text/paperscript' src='sysinfo.js' canvas='sysinfo'></script>
+    <script type='text/paperscript' src='common.js' canvas='cpuinfo'></script>
+    <script type='text/paperscript' src='cpuinfo.js' canvas='cpuinfo'></script>
   </head>
 
   <body>
-    <canvas id='sysinfo' resize="true"></canvas>
+    <canvas id='cpuinfo' resize="true"></canvas>
   </body>
 </html>
