--- a/paperjs/battery.html
+++ b/paperjs/battery.html
@@ -12,6 +12,7 @@ body {
 
     <script src='dist/paper-full.min.js' type='text/javascript'></script>
     <script src="../org.freedesktop.UPower.js" type='text/javascript'></script>
+    <script src="../sysinfo/battery.js" type='text/javascript'></script>
     <script src='common.js' type='text/paperscript' canvas='canvas'></script>
     <script src='battery.js' type='text/paperscript' canvas='canvas'></script>
 
