--- a/paperjs/battery.html
+++ b/paperjs/battery.html
@@ -5,7 +5,19 @@
     <style type='text/css'>
 
 body {
-  background-color: rgba(255,255,255,1.0);
+  background-color: rgba(0,0,0,0);
+}
+
+html, body {
+  margin: 0;
+  overflow: hidden;
+  height: 100%;
+}
+
+/* Scale canvas with resize attribute to full size */
+canvas[resize] {
+  width: 100%;
+  height: 100%;
 }
 
     </style>
