--- a/paperjs/ticktockclock.html
+++ b/paperjs/ticktockclock.html
@@ -7,6 +7,7 @@ body {
 }
     </style>
 
+    <script type='text/javascript' src='../moment.js'></script>
     <script type='text/javascript' src='dist/paper-full.min.js'></script>
     <script type='text/paperscript' src='common.js' canvas='clock'></script>
     <script type='text/paperscript' src='ticktockclock.js' canvas='clock'></script>
