Move external dependencies to separate directory

--- a/paperjs/battery.html
+++ b/paperjs/battery.html
@@ -22,7 +22,7 @@ canvas[resize] {
 
     </style>
 
-    <script src='dist/paper-full.min.js' type='text/javascript'></script>
+    <script src='../dep/paper.js/paper-full.min.js' type='text/javascript'></script>
     <script src="../org.freedesktop.UPower.js" type='text/javascript'></script>
     <script src="../sysinfo/battery.js" type='text/javascript'></script>
     <script src='common.js' type='text/paperscript' canvas='batinfo'></script>
