--- a/paperjs/ringclock.html
+++ b/paperjs/ringclock.html
@@ -7,7 +7,7 @@ body {
 }
     </style>
 
-    <script type='text/javascript' src='dist/paper-full.min.js'></script>
+    <script type='text/javascript' src='../dep/paper.js/paper-full.min.js'></script>
     <script type='text/paperscript' src='ringclock.js' canvas='clock'></script>
   </head>
 
