Move library modules to separate directory

--- a/battery_icon.html
+++ b/battery_icon.html
@@ -37,8 +37,8 @@ body {
 
     </style>
 
-    <script src="tp_smapi.js" type='text/javascript'></script>
-    <script src="org.freedesktop.UPower.js" type='text/javascript'></script>
+    <script src="lib/tp_smapi.js" type='text/javascript'></script>
+    <script src="lib/org.freedesktop.UPower.js" type='text/javascript'></script>
 
     <script type='text/javascript'>
 
