--- a/paperjs/battery.html
+++ b/paperjs/battery.html
@@ -23,8 +23,8 @@ canvas[resize] {
     </style>
 
     <script src='../dep/paper.js/paper-full.min.js' type='text/javascript'></script>
-    <script src="../org.freedesktop.UPower.js" type='text/javascript'></script>
-    <script src="../sysinfo/battery.js" type='text/javascript'></script>
+    <script src="../lib/org.freedesktop.UPower.js" type='text/javascript'></script>
+    <script src="../lib/battery.js" type='text/javascript'></script>
     <script src='common.js' type='text/paperscript' canvas='batinfo'></script>
     <script src='battery.js' type='text/paperscript' canvas='batinfo'></script>
 
