--- a/paperjs/cpuinfo.html
+++ b/paperjs/cpuinfo.html
@@ -21,7 +21,7 @@ canvas[resize] {
     </style>
 
     <script type='text/javascript' src='../dep/paper.js/paper-full.min.js'></script>
-    <script type='text/javascript' src='../sysinfo/cpuinfo.js'></script>
+    <script type='text/javascript' src='../lib/cpuinfo.js'></script>
     <script type='text/paperscript' src='common.js' canvas='cpuinfo'></script>
     <script type='text/paperscript' src='cpuinfo.js' canvas='cpuinfo'></script>
   </head>
