--- a/paperjs/meminfo.html
+++ b/paperjs/meminfo.html
@@ -21,7 +21,7 @@ canvas[resize] {
     </style>
 
     <script type='text/javascript' src='../dep/paper.js/paper-full.min.js'></script>
-    <script type='text/javascript' src='../sysinfo/meminfo.js'></script>
+    <script type='text/javascript' src='../lib/meminfo.js'></script>
     <script type='text/paperscript' src='common.js' canvas='meminfo'></script>
     <script type='text/paperscript' src='meminfo.js' canvas='meminfo'></script>
   </head>
