Move external libraries to more suitable directory

--- a/paper.js/clickclock.html
+++ b/paper.js/clickclock.html
@@ -9,7 +9,7 @@ body {
 }
     </style>
 
-    <script type='text/javascript' src='../dep/paper.js/paper-full.min.js'></script>
+    <script type='text/javascript' src='../lib/ext/paper.js/paper-full.min.js'></script>
     <script type='text/paperscript' src='clickclock.js' canvas='clock'></script>
   </head>
 
