--- a/paper.js/ticktockclock.html
+++ b/paper.js/ticktockclock.html
@@ -7,8 +7,8 @@ body {
 }
     </style>
 
-    <script type='text/javascript' src='../dep/moment.js/moment+locales.min.js'></script>
-    <script type='text/javascript' src='../dep/paper.js/paper-full.min.js'></script>
+    <script type='text/javascript' src='../lib/ext/moment.js/moment+locales.min.js'></script>
+    <script type='text/javascript' src='../lib/ext/paper.js/paper-full.min.js'></script>
     <script type='text/paperscript' src='common.js' canvas='clock'></script>
     <script type='text/paperscript' src='ticktockclock.js' canvas='clock'></script>
   </head>
