--- a/d3.js/cpuinfo.html
+++ b/d3.js/cpuinfo.html
@@ -29,7 +29,7 @@ body {
     <script type='text/javascript' src='../lib/cpuinfo.js'></script>
     <script type='text/javascript' src='cpuinfo.js'></script>
 
-    <!-- <script type='text/javascript' src='../dep/paper.js/paper&#45;full.min.js'></script> -->
+    <!-- <script type='text/javascript' src='../lib/ext/paper.js/paper&#45;full.min.js'></script> -->
     <!-- <script type='text/javascript' src='../lib/cpuinfo.js'></script> -->
     <!-- <script type='text/paperscript' src='common.js' canvas='cpuinfo'></script> -->
     <!-- <script type='text/paperscript' src='cpuinfo_bar_chart.js' canvas='cpuinfo'></script> -->
