--- a/paper.js/battery.html
+++ b/paper.js/battery.html
@@ -22,7 +22,7 @@ canvas[resize] {
 
     </style>
 
-    <script src='../dep/paper.js/paper-full.min.js' type='text/javascript'></script>
+    <script src='../lib/ext/paper.js/paper-full.min.js' type='text/javascript'></script>
     <script src="../lib/org.freedesktop.UPower.js" type='text/javascript'></script>
     <script src="../lib/battery.js" type='text/javascript'></script>
     <script src='common.js' type='text/paperscript' canvas='batinfo'></script>
