--- a/paper.js/meminfo.html
+++ b/paper.js/meminfo.html
@@ -20,7 +20,7 @@ canvas[resize] {
 }
     </style>
 
-    <script type='text/javascript' src='../dep/paper.js/paper-full.min.js'></script>
+    <script type='text/javascript' src='../lib/ext/paper.js/paper-full.min.js'></script>
     <script type='text/javascript' src='../lib/meminfo.js'></script>
     <script type='text/paperscript' src='common.js' canvas='meminfo'></script>
     <script type='text/paperscript' src='meminfo.js' canvas='meminfo'></script>
