Export object through global and use onload to call main

--- a/paper.js/battery.html
+++ b/paper.js/battery.html
@@ -30,7 +30,7 @@ canvas[resize] {
 
   </head>
 
-  <body>
+  <body onload="window.batinfo.main();">
     <canvas id='batinfo' resize='true'></canvas>
   </body>
 </html>
