--- a/paper.js/cpuinfo.html
+++ b/paper.js/cpuinfo.html
@@ -26,7 +26,7 @@ canvas[resize] {
     <script type='text/paperscript' src='cpuinfo.js' canvas='cpuinfo'></script>
   </head>
 
-  <body>
+  <body onload="window.cpuinfo.main();">
     <canvas id='cpuinfo' resize="true"></canvas>
   </body>
 </html>
