--- a/paper.js/meminfo.html
+++ b/paper.js/meminfo.html
@@ -26,7 +26,7 @@ canvas[resize] {
     <script type='text/paperscript' src='meminfo.js' canvas='meminfo'></script>
   </head>
 
-  <body>
+  <body onload="window.meminfo.main();">
     <canvas id='meminfo' resize="true"></canvas>
   </body>
 </html>
