--- a/paper.js/battery.html
+++ b/paper.js/battery.html
@@ -24,7 +24,7 @@ canvas[resize] {
 
     <script src='../lib/ext/paper.js/paper-full.min.js' type='text/javascript'></script>
     <script src='../lib/org.freedesktop.UPower.js' type='text/javascript'></script>
-    <script src='../lib/battery.js' type='text/javascript'></script>
+    <script src='../lib/sysfs.battery.js' type='text/javascript'></script>
     <script src='common.js' type='text/paperscript' canvas='batinfo'></script>
     <script src='battery.js' type='text/paperscript' canvas='batinfo'></script>
 
