More explicit name for procfs sysinfo modules

--- a/dimple.js/cpuinfo.html
+++ b/dimple.js/cpuinfo.html
@@ -17,7 +17,7 @@ body {
 
     <script src='../lib/ext/d3.js/d3.min.js'></script>
     <script src='../lib/ext/dimple.js/dimple.v2.1.6.min.js'></script>
-    <script src='../lib/cpuinfo.js'></script>
+    <script src='../lib/procfs.cpuinfo.js'></script>
     <script src='cpuinfo.js'></script>
     <script type='text/javascript'>
 function onLoad()
